# pig-segmentation-distill

./: .env.example  .gitignore  README.md  pyproject.toml  tasks.py  todo.txt
benchmark/: script.sh
benchmark/forward_only/: inference_yolo.py
benchmark/pipeline/: benchmark_sam.py  benchmark_yolo.py
dataset-scenarios/: production_cycle.ipynb  scenario_report.md
dataset-scenarios/descriptions/: AID_list.csv  Dictionary.csv  EID_list.csv  IID_list.csv  SID_list.csv  VID_list.csv
datasets/: convert.py  organize.py  sanitize.py  split.py
docs/: REPO_ORGANIZATION.md
reports/: figures.ipynb
results/: metrics_table.tex  sam3_zero_shot_comparison_plot.tex  sam3_zero_shot_performance.json  sam3_zero_shot_threshould_0.4.json  yolov8m_baseline_performance.json  yolov8m_sam3trained_performance.json  yolov8n_baseline_performance.json  yolov8n_sam3trained_performance.json  yolov8s_baseline_performance.json  yolov8s_sam3trained_performance.json
results/filtered/: sam3_zero_shot_custom_groups.json  sam3_zero_shot_performance.json  sam3_zero_shot_performance_avoid_last_findings.json  sam3_zero_shot_scenario_breakdown.json  yolov8m_baseline_performance.json  yolov8m_sam3trained_performance.json  yolov8n_baseline_performance.json  yolov8n_sam3trained_performance.json  yolov8s_baseline_performance.json  yolov8s_sam3trained_performance.json
student/: data.yaml  test.py
teacher/: SAM3_PigLife_performance.csv  evaluate.py  gallery.py  label.py  predict.py  predictions.json  predictions_threshold_0.4.json  qualitative.ipynb  zero-shot_SAM3_performance.csv
(+8 files in other folders)
