[project]
name = "pig-segmentation-distill"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "invoke==3.0.3",
    "numpy==2.4.4",
    "pandas==3.0.2",
    "pillow==12.2.0",
    "pycocotools==2.0.11",
    "python-dotenv==1.2.2",
    "streamlit==1.57.0",
    "torch==2.5.1",
    "torchaudio==2.5.1",
    "torchvision==0.20.1",
    "tqdm==4.67.3",
    "transformers==5.8.0",
    "ultralytics==8.4.48",
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchaudio = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }
